# log.cpp

./: CMakeLists.txt  example.cpp  log.h  meson.build
scripts/: build_and_test.sh
